# showbiz

./: Cargo.toml
core/: Cargo.toml
core/src/: api.rs  awareness.rs  base.rs  broadcast.rs  delegate.rs  error.rs  label.rs  lib.rs  network.rs  options.rs  queue.rs  security.rs  showbiz.rs  state.rs  suspicion.rs  timer.rs  transport.rs  types.rs  util.rs  version.rs
core/src/base/: tests.rs
core/src/delegate/: composite.rs  mock.rs  node.rs
core/src/dns/: async.rs
core/src/label/: async.rs
core/src/network/: async.rs  stream.rs
core/src/network/async/: stream.rs
core/src/network/async/packet/: handler.rs  listener.rs
core/src/network/packet/: handler.rs  listener.rs
core/src/showbiz/: async.rs
core/src/state/: async.rs  tests.rs
core/src/transport/: lpe.rs  tests.rs
core/src/transport/tests/: unimplemented.rs
core/src/types/: ack.rs  address.rs  alive.rs  bad_state.rs  compress.rs  err.rs  label.rs  name.rs  ping.rs  push_pull_state.rs
proto/: Cargo.toml  build.rs
proto/proto/: message.proto
proto/src/: lib.rs  types.rs
transports/net/: Cargo.toml
transports/net/src/: lib.rs
transports/quic/: Cargo.toml
transports/quic/src/: options.rs
transports/quic/src/options/: cli.rs
