[package]
name = "showbiz-core"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
version = { workspace= true }
edition = { workspace= true }

[features]
default = ["async", "metrics"]
async = ["async-io", "async-channel", "async-trait", "async-lock", "futures-timer", "futures-util", "futures-channel", "pin-project-lite", "weezl/async"]
# sync = ["crossbeam-channel", "showbiz-traits/sync", "parking_lot"]

metrics = ["dep:metrics"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(any(target_arch = "wasm32", windows)))'.dependencies]
rustix = { version = "0.37", features = ["process"] }

[target.'cfg(windows)'.dependencies]
hostname = "0.3"

[dependencies]
# sync
crossbeam-channel = { version = "0.5", optional = true }
parking_lot = { version = "0.12", optional = true }

# async common
async-io = { version = "1.12", optional = true }
async-channel = { version = "1.8", optional = true }
async-lock = { version = "2.7", optional = true }
async-recursion = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
futures-timer = { version = "3", optional = true }
futures-channel = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true, features = ["io"] }
pin-project-lite = { version = "0.2", optional = true }

# common
arc-swap = "1.6"
aead = { version = "0.5", features = ["bytes"] }
aes-gcm = "0.10"
bytes = { workspace = true, features = ["serde"] }
cbc = "0.1"
crc32fast = "1"
crossbeam-utils = "0.8"
indexmap = { version = "1.9", features = ["serde-1"] }
ipnet = { version = "2.7", features = ["serde"] }
metrics = { version = "0.20", optional = true }
# TODO: remove this dependency when Rust's ident concat macro stable
paste = "1"
rand = { version = "0.8" }
scopeguard = "1.1"
serde = { version = "1", features = ["derive"] }
smol_str = "0.1"
thiserror = "1"
tracing = { workspace = true }
trust-dns-proto = { workspace = true }
trust-dns-resolver = { version = "0.23.0-alpha.2", features = ["system-config"] }
url = "2.3"
viewit = { workspace = true }
wg = "0.3"
weezl = "0.1"

[dev-dependencies]
tokio = { version = "1.26", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }