[package]
name = "memberlist-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
metadata.workspace = true

[dependencies]
memberlist-core = { workspace = true, default-features = false }
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
